fixed testimonials spacing

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,12 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat Alternates', sans-serif;
 }
+h1 {
+  font-size: 2rem;
+}
+h1 a {
+  text-decoration: none;
+}
 h3 {
   color: #4B4A54;
 }
@@ -115,6 +121,7 @@ button {
 }
 
 /* Testimonial Section */
+
 
 .testimonial-text {
   font-size: 1.3rem;
